--- a/assets/style.css
+++ b/assets/style.css
@@ -255,3 +255,11 @@ p {
 .page-description h3 {
   text-align: center;
 }
+
+.project-container {
+  max-width: 1200px;
+  margin: 2rem auto;
+  display: grid;
+  gap: 1rem;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+}
